Kubernetes_Practice/HPA/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: hpa-sample-service
spec:
  selector:
    app: my-web
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: hpa-sample-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-web
  template:
    metadata:
      labels:
        app: my-web
    spec:
      containers:
      - image: 61.254.18.30:5000/ipnginx
        name: my-web-con
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "20m"
